# foodsense

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Licience 3 IA-BD.lnk  README.md  Rapport_FoodSense.docx  docker-compose.yml  requirements.txt
.docker-client/: .token_seed
.github/: CODEOWNERS  pull_request_template.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  product.py  search.py
backend/app/routers/: __init__.py  search.py  summarize.py
backend/app/services/: __init__.py  cache.py  embedding_service.py  rerank_service.py  search_service.py  summarize_service.py
backend/tests/: __init__.py  test_health.py  test_search.py  test_summarize.py
docker/: notebook.Dockerfile
docs/: README_journal_de_bord.md  V1_V2_checklist.md  V2_ETL_README.md
evaluation/: README.md  eval_keyword_baseline.py  eval_semantic.py  eval_utils.py  queries_test.json  semantic_eval_report.json
foodsense/: .env.example  .gitignore
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  (+2 more)
pipeline/: 01_clean.py  02_build_product_docs.py  03_generate_embeddings.py  04_index_qdrant.py  05_ingest_v2_to_postgres.py  06_export_v2_parquets.py  README.md  __init__.py  requirements.txt  reviews_polars.py
scripts/: Get-PythonRunner.ps1  bootstrap_local_env.ps1  enable_low_resource_mode.ps1  inspect_v2_data.py  reindex_qdrant_v2.ps1  run_quality_suite.ps1  start_backend.ps1  start_docker_stack.ps1  start_ollama.ps1
(+60 files in other folders)
