[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foodsense-backend"
version = "0.1.0"
description = "FastAPI backend for the FoodSense semantic search project"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]==0.135.2",
  "pydantic-settings==2.13.1",
  "qdrant-client==1.17.1",
  "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
