[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foodsense-backend"
version = "0.1.0"
description = "FastAPI backend for the FoodSense semantic search project"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.2",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "qdrant-client==1.17.1",
  "httpx==0.28.1",
  "polars==1.39.3",
  "pyarrow==23.0.1",
  "uvicorn[standard]==0.42.0",
  "python-multipart==0.0.22",
  "email-validator==2.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
